--- a/AWS/index.html
+++ b/AWS/index.html
@@ -13,7 +13,7 @@
         maxime in quas corporis, consequuntur qui modi praesentium suscipit, odio placeat iure eveniet adipisci
         voluptatibus totam ratione similique officia maiores fuga dolore! Aut repellat ipsum qui doloremque quam
         deleniti laboriosam accusamus aspernatur, eos ullam rerum.</p>
-    <img src="download.jpg" alt="ANIMAL">
+    <img src="dd.jpg" alt="ANIMAL">
 </body>
 
 </html>
